# Autonome

./: .gitignore  ReadMe.md  agent-platform-design.md  agent.yaml.example  docker-compose.yaml  openclaw-analysis.md  pyproject.toml  shell.nix
docs/superpowers/plans/: 2026-03-17-agent-platform-v1.md  2026-03-18-session-manager-refactor.md
docs/superpowers/specs/: 2026-03-16-agent-platform-v1-design.md
lib/agent-platform-core/: pyproject.toml
lib/agent-platform-core/src/agent_platform/: config.py
services/matrix-adapter/: Dockerfile  pyproject.toml
services/matrix-adapter/src/matrix_adapter/: mcp_server.py  model.py
services/memory-mcp/: Dockerfile  pyproject.toml
services/memory-mcp/src/memory_mcp/: server.py
services/session-manager/: Dockerfile  pyproject.toml
services/session-manager/src/session_manager/: binaries.py  event.py  main.py  mcp.py  orchestrator.py  server.py  session.py
services/signal-adapter/: Dockerfile  pyproject.toml
services/signal-adapter/src/signal_adapter/: mcp_server.py  model.py
services/system-mcp/: Dockerfile  pyproject.toml
services/system-mcp/src/system_mcp/: server.py
services/time-mcp/: Dockerfile  pyproject.toml
services/time-mcp/src/time_mcp/: mcp_server.py
services/workspace-fs-mcp/: Dockerfile  pyproject.toml
services/workspace-fs-mcp/src/workspace_fs/: server.py
src/adapters/signal/: Dockerfile  adapter.py  channel_mcp.py  inbound.py  main.py  mcp_server.py  model.py  outbound_mcp.py  requirements.txt
src/agent_platform/: config.py  session.py
src/agent_platform/callbacks/: system_prompt.py
src/mcp_servers/memory/: Dockerfile  server.py
src/mcp_servers/workspace_fs/: Dockerfile  server.py
src/session_manager/: Dockerfile  main.py  requirements.txt  server.py
tests/: conftest.py  test_adapter.py  test_binary_pointers.py  test_channel_mcp.py  test_config.py  test_integration.py  test_memory.py  test_session.py  test_session_manager.py  test_signal_inbound.py  test_signal_outbound.py  test_system_prompt.py  test_workspace_fs.py
workspace-example/: HEARTBEAT.md  SOUL.md
