[project]
name = "agent-platform"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "services/session-manager",
    "services/signal-adapter",
    "services/workspace-fs-mcp",
    "services/memory-mcp",
]

[tool.uv.sources]
agent-platform-session-manager = { workspace = true }
agent-platform-signal-adapter = { workspace = true }
agent-platform-workspace-fs-mcp = { workspace = true }
agent-platform-memory-mcp = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "agent-platform-session-manager",
    "agent-platform-signal-adapter",
    "agent-platform-workspace-fs-mcp",
    "agent-platform-memory-mcp",
]
