[project]
name = "autonome"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = []


[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.uv.workspace]
members = [
    "services/session-manager",
    "services/signal-adapter",
    "services/workspace-fs-mcp",
    "services/memory-mcp",
    "services/system-mcp",
    "services/matrix-adapter",
]

[tool.uv.sources]
autonome-session-manager = { workspace = true }
autonome-signal-adapter = { workspace = true }
autonome-workspace-fs-mcp = { workspace = true }
autonome-memory-mcp = { workspace = true }
autonome-system-mcp = { workspace = true }
autonome-matrix-adapter = { workspace = true }

[tool.uv]
dev-dependencies = [
    "pytest>=8",
    "pytest-asyncio>=0.24",
    "autonome-session-manager",
    "autonome-signal-adapter",
    "autonome-workspace-fs-mcp",
    "autonome-memory-mcp",
    "autonome-system-mcp",
    "autonome-matrix-adapter",
]
