[project]
name = "agent-platform-matrix-adapter"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "matrix-nio>=0.25",
    "fastmcp>=2.0",
    "httpx>=0.27",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/matrix_adapter"]
