[project]
name = "agent-platform-session-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "agent-platform-core",
    "litellm>=1.80,<=1.82.6",
    "mcp>=1.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "starlette>=0.40",
]

[tool.uv.sources]
agent-platform-core = { workspace = true }

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_manager"]
