[project]
name = "autonome-session-manager"
version = "0.1.0"
requires-python = ">=3.12"
dependencies = [
    "openai>=2.0",
    "pyyaml>=6",
    "mcp>=1.0",
    "httpx>=0.27",
    "uvicorn>=0.30",
    "starlette>=0.40",
    "filetype>=1.2",
    "jsonref>=1.1",
    "python-jsonpath>=1.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/session_manager"]
